# pydp-cli

./: .gitignore  Dockerfile  README.md  setup.cfg
pydp_cli/: pydp_cli.py
src/: pydp-cli.py
