[metadata]
name = pydp-cli
version = 0.0.1
author = Simon Overell
author_email = simon@human.ai
description = A cli wrapping OpenMined's PYDP
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/humanai-repo/pydp-cli
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
	pandas
	python-dp

[options.entry_points]
console_scripts =
	pydp-cli = pydp_cli.pydp_cli:main